width overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,6 @@ body{
 
 .main{
     text-align: center;
-    width: 100vh;
     opacity: 0;
     display: none;
     transition: opacity 2s ease-in;
